fixed group leader on ie

--- a/src/less/pleio.less
+++ b/src/less/pleio.less
@@ -657,3 +657,12 @@ body.___leraar {
 .___is-private span {
     color: @color-grey--60;
 }
+
+.lead {
+    &.___group {
+        .lead__justify {
+            justify-content: flex-start;
+        }
+
+    }
+}
